# glang

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  installer.iss  macos_build.spec  main.py  registry.json  shell.py  stats.html  test.glang  windows_build.spec
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  docs.md  feature_request.md
.github/workflows/: build.yml  build_macos.yaml  macos_build.yml  push.yml  windows_build.yml
.zed/: tasks.json
core/std/: list.glang  objects.glang  stdlib.glang  type.glang
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/glang-attributes/: Cargo.toml
crates/glang-attributes/src/: keywords.rs  lib.rs  position.rs  span.rs  standard_error.rs
crates/glang-interpreter/: Cargo.toml
crates/glang-interpreter/src/: context.rs  interpreter.rs  lib.rs  runtime_result.rs  symbol_table.rs
crates/glang-interpreter/src/values/: built_in_function.rs  function.rs  list.rs  mod.rs  number.rs  string.rs  value.rs
crates/glang-ir/: Cargo.toml
crates/glang-ir/src/: ir_node.rs  ir_parser.rs  lib.rs
crates/glang-lexer/: Cargo.toml
crates/glang-lexer/src/: lexer.rs  lib.rs  token.rs  token_type.rs
crates/glang-logging/: Cargo.toml
crates/glang-logging/src/: lib.rs  logs.rs
crates/glang-package-manager/: Cargo.toml
crates/glang-package-manager/src/: components.rs  glang_self.rs  lib.rs  logs.rs  manager.rs  packages.rs
crates/glang-parser/: Cargo.toml
crates/glang-parser/src/: ast_node.rs  lib.rs  operator.rs  parse_result.rs  parser.rs
crates/glang-parser/src/nodes/: ast_node.rs  binary_operator_node.rs  break_node.rs  call_node.rs  const_assign_node.rs  continue_node.rs  for_node.rs  function_definition_node.rs  if_node.rs  import_node.rs  list_node.rs  mod.rs  number_node.rs  return_node.rs  string_node.rs  try_except_node.rs  unary_operator_node.rs  variable_access_node.rs  variable_assign_node.rs  variable_reassign_node.rs  while_node.rs
crates/glang-tooling/: Cargo.toml
crates/glang-tooling/src/: components.rs  lib.rs  logging.rs  manager.rs
examples/: example_1.glang
modules/: math.glang  standard_lib.glang  stdlib.glang
modules/std/: objects.glang  stdlib.glang  string.glang
resources/icons/: george_language_icon.icns
src/: errors.py  interpreter_and_values.py  language.py  lexer.py  lib.rs  main.rs  nodes.py  parser.py  position.py  runtime_result.py  strings_with_arrows.py  symbol_table.py  token.py  token_types_and_keywords.py  tokens_and_keywords.py  values.py
src/command/: mod.rs  project.rs  repl.rs  show.rs
src/errors/: standard_error.rs
src/interpreting/: context.rs  interpreter.rs  runtime_result.rs  symbol_table.rs
src/lexing/: lexer.rs  position.rs  token.rs  token_type.rs
src/nodes/: ast_node.rs  binary_operator_node.rs  break_node.rs  call_node.rs  common_node.rs  const_assign_node.rs  continue_node.rs  for_node.rs  function_definition_node.rs  if_node.rs  import_node.rs  list_node.rs  mod.rs  number_node.rs  return_node.rs  string_node.rs  try_except_node.rs  unary_operator_node.rs  variable_access_node.rs  variable_assign_node.rs  while_node.rs
src/package_manager/: logs.rs  packages.rs  paths.rs
src/parsing/: parse_result.rs  parser.rs
src/syntax/: attributes.rs
src/token/: token.rs  token_type.rs
src/values/: built_in_function.rs  function.rs  list.rs  mod.rs  number.rs  string.rs  value.rs
tests/: run_tests.sh  test_comparisons.glang  test_constants.glang  test_loop.glang  test_mutability.glang  test_recursion.glang  test_try.glang
utils/: README.txt  macos_build.spec
