[workspace]
members = [
    "crates/app",
    "crates/glang-lexer",
    "crates/glang-parser",
    "crates/glang-interpreter",
    "crates/glang-package-manager",
    "crates/glang-attributes",
    "crates/glang-logging",
]
resolver = "3"

[workspace.package]
version = "4.0.0-alpha"
edition = "2024"
repository = "https://github.com/mpsoftwarefoundation/GeorgeLanguage.git"
description = "The George Programming Language"
authors = ["MP Software Foundation"]
license = "GPL v3"

[workspace.dependencies]
glang = { path = "crates/app" }
glang-attributes = { path = "crates/glang-attributes" }
glang-lexer = { path = "crates/glang-lexer" }
glang-parser = { path = "crates/glang-parser" }
glang-interpreter = { path = "crates/glang-interpreter" }
glang-package-manager = { path = "crates/glang-package-manager" }

[workspace.features]
default = []
benchmark = ["glang/benchmark"]
no-std = ["glang/no-std"]
