[workspace]
members = [
    "crates/app",
    "crates/glang-lexer",
    "crates/glang-parser",
    "crates/glang-interpreter",
    "crates/glang-attributes",
    "crates/glang-tooling", "crates/glang-ir",
]
resolver = "3"

[workspace.package]
version = "0.1.4"
edition = "2024"
repository = "https://github.com/george-language/glang.git"
description = "The George Programming Language"
authors = ["The George Language Foundation"]
license = "GPL-3.0"

[workspace.dependencies]
glang = { path = "crates/app" }
glang-attributes = { path = "crates/glang-attributes" }
glang-lexer = { path = "crates/glang-lexer" }
glang-parser = { path = "crates/glang-parser" }
glang-interpreter = { path = "crates/glang-interpreter" }
glang-tooling = { path = "crates/glang-tooling" }

[workspace.features]
default = []
benchmark = ["glang/benchmark"]
no-std = ["glang/no-std"]
