[package]
name = "glang"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
glang-lexer = { path = "../glang-lexer" }
glang-parser = { path = "../glang-parser" }
glang-interpreter = { path = "../glang-interpreter" }
glang-package-manager = { path = "../glang-package-manager" }
glang-attributes = { path = "../glang-attributes" }
clap = { version = "4.5.40", features = ["derive"] }
simply_colored = "0.1.0"

[features]
default = []
benchmark = []
