[package]
name = "glang"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
glang-lexer = { path = "../glang-lexer" }
glang-parser = { path = "../glang-parser" }
glang-interpreter = { path = "../glang-interpreter" }
glang-attributes = { path = "../glang-attributes" }
glang-tooling = { path = "../glang-tooling" }
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"

[features]
default = []
benchmark = []
no-std = []
