[package]
name = "glang-interpreter"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
glang-attributes = { path = "../glang-attributes" }
glang-lexer = { path = "../glang-lexer" }
glang-parser = { path = "../glang-parser" }
