[package]
name = "glang-ir"
version.workspace = true
edition.workspace = true
repository.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
glang-parser = { path = "../glang-parser" }
glang-attributes = { path = "../glang-attributes" }
bincode = "3.0"
serde = "1.0.228"
