[package]
name = "glang-package-manager"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
glang-logging = { path = "../glang-logging" }
simply_colored = "0.1.4"
reqwest = { version = "0.12.25", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
zip = "7.0.0"
toml = "0.9.8"
stringcase = "0.4.0"
dirs = "6.0.0"

[lib]
doctest = false
