[package]
name = "glang-package-manager"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
glang-logging = { path = "../glang-logging" }
simply_colored = "0.1.4"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zip = "8.4.0"
toml = "0.9.11"
stringcase = "0.4.0"
dirs = "6.0.0"

[lib]
doctest = false
