[package]
name = "glang-tooling"
version.workspace = true
edition.workspace = true
repository.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
glang-attributes = { path = "../glang-attributes" }
simply_colored = "0.1.4"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zip = "8.6.0"
toml = "1.1.2"
stringcase = "0.4.0"
dirs = "6.0.0"
sha2 = "0.11.0"
bincode = "1.3.3"
semver = "1.0.28"
walkdir = "2.5.0"
hex = "0.4.3"

[lib]
doctest = false
